create top header

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="css/style.min.css">i
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+    <header>
+        <section class="top-header">
+            <div class="container">
+                <div class="top-header__wrapper">
+                    <div class="top-header__menu">
+                        <a href="#" class="top-header__menu_item">Підтримка</a>
+                        <a href="#" class="top-header__menu_item">Контакти</a>
+                    </div>
+                    <div class="top-header__language">
+                        <select class="top-header__language_select">
+                            <option>Українська</option>
+                            <option>English</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+    </section>
+    </header>
 </body>
 </html>
