--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,60 @@
                     </div>
                 </div>
             </div>
-    </section>
+        </section>
+
+        <section class="main-header">
+            <div class="container">
+                <div class="main-header__wrapper">
+                    <div class="main-header__left">
+                        <div class="main-header__logo">
+                            <img src="img/header/logotype.svg" alt="logo">
+                        </div>
+                        <div class="main-header__menu">
+                            <ul>
+                                <li class="main-header__menu_item main-header__menu_item-drop">
+                                    <a href="#">Продукти</a>
+                                </li>
+                                <li class="main-header__menu_item main-header__menu_item-drop">
+                                    <a href="#">Рішення</a></li>
+                                <li class="main-header__menu_item">
+                                    <a href="#">Ціни</a></li>
+                                <li class="main-header__menu_item main-header__menu_item-drop">
+                                    <a href="#">Компанія</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <div class="main-header__right">
+                        <div class="main-header__buttons">
+                            <button class="btn btn_blue main-header__btn main-header__btn_blue ">Вхід</button>
+                            <button class="btn main-header__btn">Підключитися</button>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </section>
     </header>
+    <section class="promo">
+        <div class="container">
+            <div class="promo__wrapper">
+                <div class="promo__left">
+                    <h1 class="promo__title title_fz56">Хмарна платформа <br> для безперебійного <br> запуску</h1>
+                </div>
+                <div class="promo__right">
+                    <div class="promo__desr">
+                        <h2 class="title_fz20">Автоматизовано, просто і доступно кожному. <br> Почніть створювати свої круті цифрові <br> продукти прямо зараз.</h2>
+                        </div>
+                    <button class="btn btn_arrow">Підключитися →</button>
+                    <div class="promo__connect">або <a href="#">Зв’язатися з відділом продаж</a></div>
+                </div>
+                <!-- <img src="img/header/Lines.png" alt="lines" class="promo__lines"> -->
+            </div>
+        </div>    
+    </section>
+    
+    
+
 </body>
 </html>
