--- a/src/index.html
+++ b/src/index.html
@@ -34,19 +34,25 @@
                         <div class="main-header__logo">
                             <img src="img/header/logotype.svg" alt="logo">
                         </div>
-                        <div class="main-header__menu">
-                            <ul>
-                                <li class="main-header__menu_item main-header__menu_item-drop">
-                                    <a href="#">Продукти</a>
-                                </li>
-                                <li class="main-header__menu_item main-header__menu_item-drop">
-                                    <a href="#">Рішення</a></li>
-                                <li class="main-header__menu_item">
-                                    <a href="#">Ціни</a></li>
-                                <li class="main-header__menu_item main-header__menu_item-drop">
-                                    <a href="#">Компанія</a></li>
-                            </ul>
-                        </div>
+                        <ul class="main-header__menu">
+                            <li class="main-header__menu_item main-header__menu_item-drop">
+                                <a href="#">Продукти</a>
+                                <ul class="main-header__menu_item-drop_list">
+                                    <li class="main-header__menu_item-drop_list_item"><a href="#">Cloud Instanse</a></li>
+                                    <li class="main-header__menu_item-drop_list_item"><a href="#">Block Storage</a></li>
+                                    <li class="main-header__menu_item-drop_list_item"><a href="#">Virtual Privat Cloud (VPC)</a></li>
+                                    <li class="main-header__menu_item-drop_list_item"><a href="#">Firewall (FWaaS)</a></li>
+                                    <li class="main-header__menu_item-drop_list_item"><a href="#">Load Balancer</a></li>
+                                    <li class="main-header__menu_item-drop_list_item"><a href="#">Ціни</a></li>
+                                </ul>
+                            </li>
+                            <li class="main-header__menu_item main-header__menu_item-drop">
+                                <a href="#">Рішення</a></li>
+                            <li class="main-header__menu_item">
+                                <a href="#">Ціни</a></li>
+                            <li class="main-header__menu_item main-header__menu_item-drop">
+                                <a href="#">Компанія</a></li>
+                        </ul>
                     </div>
 
 
@@ -73,12 +79,15 @@
                     <button class="btn btn_arrow">Підключитися →</button>
                     <div class="promo__connect">або <a href="#">Зв’язатися з відділом продаж</a></div>
                 </div>
-                <!-- <img src="img/header/Lines.png" alt="lines" class="promo__lines"> -->
             </div>
         </div>    
+        <div class="promo__lines">
+            <img src="img/header/Lines.jpg" alt="lines">
+       </div>
     </section>
     
-    
+
+
 
 </body>
 </html>
