--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,24 @@
             <img src="img/header/Lines.jpg" alt="lines">
        </div>
     </section>
-    
+    <section class="first">
+        <div class="container">
+            <div class="first__wrapper">
+                <div class="first__left">
+                    <div class="first__dots">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="first__descr">Створюйте, <br> розгортайте <br> та масштабуйте</div>
+                </div>
+                <div class="first__right">
+                    <h2 class="first__title title_fz56 title_fz56_black">Миттєво розгортайте високопродуктивну хмарну інфраструктуру у різних локаціях.</h2>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
 
