add first product

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,18 @@
                     <h2 class="first__title title_fz56 title_fz56_black">Миттєво розгортайте високопродуктивну хмарну інфраструктуру у різних локаціях.</h2>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section class="products">
+        <div class="container">
+            <div class="products__first">
+                <h2 class="products__first_title title_fz46">Cloud Compute</h2>
+                <div class="products__first_subtitle title_fz20">Миттєва готовність, гнучкість та автоматизація за допомогою хмарного API</div>
+                <div class="products__first_img">
+                    <img src="img/products/cloud_illustration.svg" alt="clouds">
+                </div>
+            </div>
         </div>
     </section>
 
