update products - add second

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,34 @@
                     <img src="img/products/cloud_illustration.svg" alt="clouds">
                 </div>
             </div>
+
+            <div class="products__second">
+                <div class="products__second_name">
+                        <h2 class="produts__second_title title_fz46 title_fz46_black">Cloud Instance</h2>
+                        <div class="products__second_subtitle title_fz20 title_fz20_black">Cloud Instances в Україні та за кордоном <br>
+                        з оплатою за споживання</div>
+                        <div class="products__second_wrapper">
+                            <div class="products__second_item">
+                                <img src="icons/products/ic-flexibility.svg" alt="flexibility" class="products__second_icon">
+                                <div class="products__second_item-text">
+                                    <div class="products__second_feauture title_fz18">Гнучкість</div>
+                                    <div class="products__second_descr title_fz18">Можете отримати будь-яку конфігурацію Cloud Instance за потреби</div>
+                                </div>
+                            </div>
+                            <div class="products__second_item">
+                                <img src="icons/products/ic-desktop.svg" alt="desktop" class="products__second_icon">
+                                <div class="products__second_item-text">
+                                    <div class="products__second_feauture title_fz18">Жива міграція</div>
+                                    <div class="products__second_descr title_fz18">Можливість запуску вашого інстансу на іншій ноді у разі винекнення проблем</div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="products__second_btn btn_light">Докладніше</button>
+                        <div class="products__second_bg">
+                            <img src="img/products/ill_cloud-instance.svg" alt="cloud-instance">
+                        </div>
+                </div>
+            </div>
         </div>
     </section>
 
