add third product

--- a/src/index.html
+++ b/src/index.html
@@ -115,29 +115,56 @@
 
             <div class="products__second">
                 <div class="products__second_name">
-                        <h2 class="produts__second_title title_fz46 title_fz46_black">Cloud Instance</h2>
-                        <div class="products__second_subtitle title_fz20 title_fz20_black">Cloud Instances в Україні та за кордоном <br>
-                        з оплатою за споживання</div>
-                        <div class="products__second_wrapper">
-                            <div class="products__second_item">
-                                <img src="icons/products/ic-flexibility.svg" alt="flexibility" class="products__second_icon">
-                                <div class="products__second_item-text">
-                                    <div class="products__second_feauture title_fz18">Гнучкість</div>
-                                    <div class="products__second_descr title_fz18">Можете отримати будь-яку конфігурацію Cloud Instance за потреби</div>
-                                </div>
-                            </div>
-                            <div class="products__second_item">
-                                <img src="icons/products/ic-desktop.svg" alt="desktop" class="products__second_icon">
-                                <div class="products__second_item-text">
-                                    <div class="products__second_feauture title_fz18">Жива міграція</div>
-                                    <div class="products__second_descr title_fz18">Можливість запуску вашого інстансу на іншій ноді у разі винекнення проблем</div>
-                                </div>
+                    <h2 class="produts__second_title title_fz46 title_fz46_black">Cloud Instance</h2>
+                    <div class="products__second_subtitle title_fz20 title_fz20_black">Cloud Instances в Україні та за кордоном <br>
+                    з оплатою за споживання</div>
+                    <div class="products__second_wrapper">
+                        <div class="products__second_item">
+                            <img src="icons/products/ic-flexibility.svg" alt="flexibility" class="products__second_icon">
+                            <div class="products__second_item-text">
+                                <div class="products__second_feauture title_fz18">Гнучкість</div>
+                                <div class="products__second_descr title_fz18">Можете отримати будь-яку конфігурацію Cloud Instance за потреби</div>
                             </div>
                         </div>
-                        <button class="products__second_btn btn_light">Докладніше</button>
-                        <div class="products__second_bg">
-                            <img src="img/products/ill_cloud-instance.svg" alt="cloud-instance">
+                        <div class="products__second_item">
+                            <img src="icons/products/ic-desktop.svg" alt="desktop" class="products__second_icon">
+                            <div class="products__second_item-text">
+                                <div class="products__second_feauture title_fz18">Жива міграція</div>
+                                <div class="products__second_descr title_fz18">Можливість запуску вашого інстансу на іншій ноді у разі винекнення проблем</div>
+                            </div>
                         </div>
+                    </div>
+                    <button class="products__second_btn btn_light">Докладніше</button>
+                    <div class="products__second_bg">
+                        <img src="img/products/ill_cloud-instance.svg" alt="cloud-instance">
+                    </div>
+                </div>
+            </div>
+
+            <div class="products__third">
+                <div class="products__third_name">
+                    <h2 class="produts__third_title title_fz46 title_fz46_black">Block Storage</h2>
+                    <div class="products__third_subtitle title_fz20 title_fz20_black">Гнучке та надійне сховище для ресурсомістких <br> робочих навантажень</div>
+                    <div class="products__third_wrapper">
+                        <div class="products__third_item">
+                            <img src="icons/products/ic_fault-tolerance.svg" alt="fault-tolerance" class="products__third_icon">
+                            <div class="products__third_item-text">
+                                <div class="products__third_feauture title_fz18">Відмовостійкість</div>
+                                <div class="products__third_descr title_fz18">Ваші дані реплікуються на декількох вузлах, щоб забезпечити доступність навіть у разі винекнення проблем</div>
+                            </div>
+                        </div>
+                        <div class="products__third_item">
+                            <img src="icons/products/ic_size-volume.svg" alt="size-volume" class="products__third_icon">
+                            <div class="products__third_item-text">
+                                <div class="products__third_feauture title_fz18">Резервне копіювання</div>
+                                <div class="products__third_descr title_fz18">Створюйте резервні копії або снапшоти за лічені хвилини</div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="products__third_btn btn_light">Докладніше</button>
+                    <div class="products__third_bg">
+                        <img src="img/products/ill_block-storage.svg" alt="cloud-instance">
+                    </div>
                 </div>
             </div>
         </div>
