--- a/src/index.html
+++ b/src/index.html
@@ -118,80 +118,80 @@
                     <h2 class="produts__second_title title_fz46 title_fz46_black">Cloud Instance</h2>
                     <div class="products__second_subtitle title_fz20 title_fz20_black">Cloud Instances в Україні та за кордоном <br>
                     з оплатою за споживання</div>
-                    <div class="products__second_wrapper">
-                        <div class="products__second_item">
-                            <img src="icons/products/ic-flexibility.svg" alt="flexibility" class="products__second_icon">
-                            <div class="products__second_item-text">
-                                <div class="products__second_feauture title_fz18">Гнучкість</div>
-                                <div class="products__second_descr title_fz18">Можете отримати будь-яку конфігурацію Cloud Instance за потреби</div>
-                            </div>
-                        </div>
-                        <div class="products__second_item">
-                            <img src="icons/products/ic-desktop.svg" alt="desktop" class="products__second_icon">
-                            <div class="products__second_item-text">
-                                <div class="products__second_feauture title_fz18">Жива міграція</div>
-                                <div class="products__second_descr title_fz18">Можливість запуску вашого інстансу на іншій ноді у разі винекнення проблем</div>
-                            </div>
+                </div>
+                <div class="products__second_wrapper">
+                    <div class="products__second_item">
+                        <img src="icons/products/ic-flexibility.svg" alt="flexibility" class="products__second_icon">
+                        <div class="products__second_item-text">
+                            <div class="products__second_feauture title_fz18">Гнучкість</div>
+                            <div class="products__second_descr title_fz18">Можете отримати будь-яку конфігурацію Cloud Instance за потреби</div>
                         </div>
                     </div>
-                    <button class="products__second_btn btn_light">Докладніше</button>
-                    <div class="products__second_bg">
-                        <img src="img/products/ill_cloud-instance.svg" alt="cloud-instance">
+                    <div class="products__second_item">
+                        <img src="icons/products/ic-desktop.svg" alt="desktop" class="products__second_icon">
+                        <div class="products__second_item-text">
+                            <div class="products__second_feauture title_fz18">Жива міграція</div>
+                            <div class="products__second_descr title_fz18">Можливість запуску вашого інстансу на іншій ноді у разі винекнення проблем</div>
+                        </div>
                     </div>
                 </div>
+                <button class="products__second_btn btn_light">Докладніше</button>
+                <div class="products__second_bg">
+                    <img src="img/products/ill_cloud-instance.svg" alt="cloud-instance">
+                </div>  
             </div>
 
             <div class="products__third">
                 <div class="products__third_name">
                     <h2 class="produts__third_title title_fz46 title_fz46_black">Block Storage</h2>
                     <div class="products__third_subtitle title_fz20 title_fz20_black">Гнучке та надійне сховище для ресурсомістких <br> робочих навантажень</div>
-                    <div class="products__third_wrapper">
-                        <div class="products__third_item">
-                            <img src="icons/products/ic_fault-tolerance.svg" alt="fault-tolerance" class="products__third_icon">
-                            <div class="products__third_item-text">
-                                <div class="products__third_feauture title_fz18">Відмовостійкість</div>
-                                <div class="products__third_descr title_fz18">Ваші дані реплікуються на декількох вузлах, щоб забезпечити доступність навіть у разі винекнення проблем</div>
-                            </div>
-                        </div>
-                        <div class="products__third_item">
-                            <img src="icons/products/ic_size-volume.svg" alt="size-volume" class="products__third_icon">
-                            <div class="products__third_item-text">
-                                <div class="products__third_feauture title_fz18">Резервне копіювання</div>
-                                <div class="products__third_descr title_fz18">Створюйте резервні копії або снапшоти за лічені хвилини</div>
-                            </div>
+                </div>
+                <div class="products__third_wrapper">
+                    <div class="products__third_item">
+                        <img src="icons/products/ic_fault-tolerance.svg" alt="fault-tolerance" class="products__third_icon">
+                        <div class="products__third_item-text">
+                            <div class="products__third_feauture title_fz18">Відмовостійкість</div>
+                            <div class="products__third_descr title_fz18">Ваші дані реплікуються на декількох вузлах, щоб забезпечити доступність навіть у разі винекнення проблем</div>
                         </div>
                     </div>
-                    <button class="products__third_btn btn_light">Докладніше</button>
-                    <div class="products__third_bg">
-                        <img src="img/products/ill_block-storage.svg" alt="cloud-instance">
+                    <div class="products__third_item">
+                        <img src="icons/products/ic_size-volume.svg" alt="size-volume" class="products__third_icon">
+                        <div class="products__third_item-text">
+                            <div class="products__third_feauture title_fz18">Резервне копіювання</div>
+                            <div class="products__third_descr title_fz18">Створюйте резервні копії або снапшоти за лічені хвилини</div>
+                        </div>
                     </div>
                 </div>
+                <button class="products__third_btn btn_light">Докладніше</button>
+                <div class="products__third_bg">
+                    <img src="img/products/ill_block-storage.svg" alt="cloud-instance">
+                </div>   
             </div>
             <div class="products__fourth">
                 <div class="products__fourth_name">
                     <h2 class="produts__fourth_title title_fz46 title_fz46_black">Virtual Private Cloud (VPC)</h2>
                     <div class="products__fourth_subtitle title_fz20 title_fz20_black">Підвищений рівень безпеки та ізоляції <br> інфраструктури у хмарі</div>
-                    <div class="products__fourth_wrapper">
-                        <div class="products__fourth_item">
-                            <img src="icons/products/ic_private-topology.svg" alt="private-topology" class="products__fourth_icon">
-                            <div class="products__fourth_item-text">
-                                <div class="products__fourth_feauture title_fz18">Приватна топологія</div>
-                                <div class="products__fourth_descr title_fz18">Можливість створення приватних топологій для вашої інфраструктури
-                                </div>
-                            </div>
-                        </div>
-                        <div class="products__fourth_item">
-                            <img src="icons/products/ic_customize.svg" alt="customize" class="products__fourth_icon">
-                            <div class="products__fourth_item-text">
-                                <div class="products__fourth_feauture title_fz18">Кастомізація</div>
-                                <div class="products__fourth_descr title_fz18">Налаштуйте свій VPC відповідно до потреб вашої інфраструктури</div>
+                </div>
+                <div class="products__fourth_wrapper">
+                    <div class="products__fourth_item">
+                        <img src="icons/products/ic_private-topology.svg" alt="private-topology" class="products__fourth_icon">
+                        <div class="products__fourth_item-text">
+                            <div class="products__fourth_feauture title_fz18">Приватна топологія</div>
+                            <div class="products__fourth_descr title_fz18">Можливість створення приватних топологій для вашої інфраструктури
                             </div>
                         </div>
                     </div>
-                    <button class="products__fourth_btn btn_light">Докладніше</button>
-                    <div class="products__fourth_bg">
-                        <img src="img/products/ill_vpc.svg" alt="vpc">
+                    <div class="products__fourth_item">
+                        <img src="icons/products/ic_customize.svg" alt="customize" class="products__fourth_icon">
+                        <div class="products__fourth_item-text">
+                            <div class="products__fourth_feauture title_fz18">Кастомізація</div>
+                            <div class="products__fourth_descr title_fz18">Налаштуйте свій VPC відповідно до потреб вашої інфраструктури</div>
+                        </div>
                     </div>
+                </div>
+                <button class="products__fourth_btn btn_light">Докладніше</button>
+                <div class="products__fourth_bg">
+                    <img src="img/products/ill_vpc.svg" alt="vpc">
                 </div>
             </div>
             <div class="products__fifth">
@@ -210,7 +210,7 @@
                     </div>
                     <div class="products__fifth_item">
                         <img src="icons/products/ic_filter.svg" alt="filter" class="products__fifth_icon">
-                        <div class="products__fourth_item-text">
+                        <div class="products__fifth_item-text">
                             <div class="products__fifth_feauture title_fz18">Автоматична Security Group</div>
                             <div class="products__fifth_descr title_fz18">Можливість автоматичного створення Security Group через API</div>
                         </div>
@@ -219,6 +219,25 @@
                 <button class="products__fifth_btn btn_light">Докладніше</button>
                 <div class="products__fifth_bg">
                     <img src="img/products/ill_firewall.svg" alt="firewall">
+                </div>
+            </div>
+            <div class="products__sixth">
+                <div class="products__sixth_name">
+                    <h2 class="produts__sixth_title title_fz46 title_fz46_black">Load Balancer</h2>
+                    <div class="products__sixth_subtitle title_fz20 title_fz20_black">Балансування HTTP-, HTTPS- та TCP-трафіка</div>
+                </div>
+                <div class="products__sixth_wrapper">
+                    <div class="products__sixth_item">
+                        <img src="icons/products/ic_checkmark-with-bg.svg" alt="check" class="products__sixth_icon">
+                        <div class="products__sixth_item-text">
+                            <div class="products__sixth_descr title_fz18">Розподіляйте робочі навантаження між кількома Instances під час пікових навантажень на ваш веб-сайт за допомогою Load Balancer, щоб забезпечити постійну доступність та уникнути перевантаження
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="products__sixth_btn btn_light">Докладніше</button>
+                <div class="products__sixth_bg">
+                    <img src="img/products/ill_load-balancer.svg" alt="load-balancer">
                 </div>
             </div>
         </div>
