--- a/src/index.html
+++ b/src/index.html
@@ -243,6 +243,37 @@
         </div>
     </section>
 
+    <section class="interface">
+        <div class="container">
+            <div class="interface__text">
+                <h2 class="interface__title title_fz56">Інтуїтивно зрозумілий інтерфейс.
+                    Передбачуваний. Мінімалістичний.</h2>
+                <div class="interface__descr">
+                    <div class="title_fz20 interface__descr_one">Зручне керування хмарними сервісами та ресурсами.</div>
+                    <div class="title_fz20 interface__descr_two">У докладній документації знайдуться всі необхідні покрокові посібники.</div>
+                    <button class="btn btn_arrow interface__btn">Підключитися →</button>
+                </div>
+            </div>
+               
+            <div class="interface__carousel">
+                <button class="btn_carousel"><img src="icons/3_section/right.svg" alt="next"></button>
+                <button class="btn_carousel btn_carousel_prev"><img src="icons/3_section/left.svg" alt="prev">
+                </button>
+                <div class="interface__block">
+                    <img src="img/3_section/block-storage.png" alt="block-storage">
+                </div>
+                <div class="interface__scroll">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+        
+
+        </div>
+    </section>
+
 
 
 </body>
