add section document

--- a/src/index.html
+++ b/src/index.html
@@ -269,8 +269,17 @@
                     <span></span>
                 </div>
             </div>
-        
+        </div>
+    </section>
 
+    <section class="document">
+        <div class="container">
+            <div class="document__wrapper">
+                <div class="document__img">
+                    <img src="img/5_section/documents.png" alt="documents">
+                </div>
+                <h2 class="document__title title_fz56 title_fz56_black">Докладна документація, яка допоможе вам створити та масштубувати вашу інфрастуктуру</h2>
+            </div>
         </div>
     </section>
 
