add sixth section

--- a/src/index.html
+++ b/src/index.html
@@ -283,6 +283,26 @@
         </div>
     </section>
 
+    <section class="sixth">
+        <div class="container">
+            <div class="sixth__wrapper">
+                <div class="sixth__item">
+                    <div class="sixth__title title_fz24">Знайдіть те, що шукаєте</div>
+                    <div class="sixth__descr">Завдяки блискавичному пошуку та фільтрам наша документація зручна для навігації. Крім того, у нас є темний режим.</div>
+                </div>
+                <div class="sixth__item">
+                    <div class="sixth__title title_fz24">Користуйся так, як хочеш, з власною швидкістю</div>
+                    <div class="sixth__descr">Незалежно від того, чи ви є новачком або досвідченим користувачем хмарних обчислень, у нас є відповідне відео, покрокове керівництво та приклад коду.</div>
+                </div>
+                <article class="sixth__ask">
+                    <img src="icons/6_section/ic_question.svg" alt="question" class="sixth__ask_img">
+                    <div class="sixth__ask_descr">Задайте будь-яке питання про продукт, його налаштування, труднощі в роботі або неполадки. <br><br>Спеціалісти дадуть відповідь протягом 15 хвилин.</div>
+                    <button class="sixth__ask_btn btn">Задати питання</button>
+                </article>
+            </div>
+        </div>
+    </section>
+
 
 
 </body>
