add section calc

--- a/src/index.html
+++ b/src/index.html
@@ -303,6 +303,22 @@
         </div>
     </section>
 
+    <section class="calc">
+        <div class="container">
+            <div class="calc__wrapper">
+                <div class="calc__textblock">
+                    <h2 class="calc__title title_fz56_black title_fz56">Ви завжди знаєте, скільки витратили та на що</h2>
+                    <div class="calc__textblock_descr">Тарифи OneCloudPlanet підійдуть як високонавантаженим сервісам великих компаній, так і невеликим проектам зі скромними вимогами. <br><br>Платіть тільки за ресурси, що використовуються.</div>
+                    <button class="calc__textblock_btn btn btn_light">Розрахувати вартість</button>
+                </div>
+                <div class="calc__ill">
+                    <img src="img/6_section/ill_.svg" alt="illustration_calc">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 
 
 </body>
