adaptive bugs fixed in header section

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -110,7 +111,7 @@
             </div>
         </section>
     </header>
-    <section class="promo">
+    <!-- <section class="promo">
         <div class="container">
             <div class="promo__wrapper">
                 <div class="promo__left">
@@ -120,15 +121,17 @@
                     <div class="promo__desr">
                         <h2 class="title_fz20">Автоматизовано, просто і доступно кожному. Почніть створювати свої круті цифрові продукти прямо зараз.</h2>
                         </div>
-                    <button class="btn btn_arrow">Підключитися →</button>
+                    <div>
+                    <button class="promo_btn btn btn_arrow">Підключитися →</button>
                     <div class="promo__connect">або <a href="#">Зв’язатися з відділом продаж</a></div>
+                    </div>
                 </div>
             </div>
         </div>    
         <div class="promo__lines">
             <img src="img/header/Lines.jpg" alt="lines">
        </div>
-    </section>
+    </section> -->
     <!-- <section class="first">
         <div class="container">
             <div class="first__wrapper">
